# mpbuild

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  hans_test.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: screenshot.py
src/mpbuild/: __init__.py  __main__.py  board_database.py  build.py  build_api.py  check_images.py  cli.py  completions.py  find_boards.py  find_boards_hmaerki.py  interactive.py  interactive.tcss  list_boards.py  list_pins.py
tests/: README_tests.md  conftest.py  test_board_database.py  test_build_board_for_each_port.py  test_build_container.py  test_build_some_variants.py  test_build_some_variants.sh  test_cli.py  test_completions.py  test_detect_idf_version.py  test_docker_build_cmd.py  test_find_boards.py  test_interactive.py  test_worktrees.py
