[project]
name = "mpbuild"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt Trentini", email = "matt.trentini@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mpbuild"]
