[project]
name = "mpbuild"
version = "0.9.1"
description = "Build MicroPython firmware with ease!"
authors = [
    { name = "Matt Trentini", email = "matt.trentini@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
mpbuild = "mpbuild.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mpbuild"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/mpbuild"]
omit = ["src/mpbuild/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
